insertion-mobile-wizard: Align the sub menu arrow correctly

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -827,3 +827,8 @@ tr.useritem > td > img {
 	display: table-cell;
 	vertical-align: middle;
 }
+
+.sub-menu-arrow {
+	margin-right: 40px;
+	background: transparent;
+}
